# lexia

./: Cargo.toml  README.md  prueba.txt  render.yaml  style.css  test_doc.txt
src/: display.rs  extractor.rs  gemini.rs  main.rs  server.rs
static/: app.js  design.css  index.html
